Small dark theme color fixes and change input text, buttons font size Small contrast change for respecting accesibility gidelines

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,11 +4,13 @@
 
   --primary: #adb6f4;
   --primary-content: #13238f;
+  --primary-content-dark: #000000;
   --primary-dark: #808eee;
   --primary-light: #dadefa;
 
   --secondary: #f5e573;
   --secondary-content: #625707;
+  --secondary-content-dark: #262202;
   --secondary-dark: #f2dc43;
   --secondary-light: #f8eea3;
 
@@ -58,17 +60,10 @@
   height: 0;
 }
 
-@media (hover: none),
-  (hover: on-demand),
-  (-moz-touch-enabled: 1),
-  (pointer: coarse) and (max-width: 900px) {
-  /*make a bigger interface for smartphones and tuched device*/
-  html {
-    font-size: 18px;
-  }
-}
-
 button {
+  font: inherit;
+  letter-spacing: inherit;
+  word-spacing: inherit;
   padding: 0.3em;
   border-radius: 0.3em;
   margin: 0.1em;
@@ -93,6 +88,9 @@ button:active {
 
 input,
 select {
+  font: inherit;
+  letter-spacing: inherit;
+  word-spacing: inherit;
   color: var(--copy);
   background-color: var(--foreground);
   border-radius: 3px;
@@ -149,7 +147,7 @@ Navigation Menu
   width: 80%;
   height: 4px;
   border-radius: 2px;
-  background-color: black;
+  background-color: var(--primary-content-dark);
   float: left;
   margin: calc((100% - 4px * 3 - 0.2em) / 4) 0 0 0;
 }
@@ -179,7 +177,6 @@ Navigation Menu
   text-decoration: none;
   border-radius: 3px;
   display: block;
-  font-size: 16px;
   position: relative;
   cursor: pointer;
 }
@@ -202,7 +199,7 @@ Navigation Menu
   width: 100%;
   height: 100%;
   display: block;
-  color: black;
+  color: var(--primary-content-dark);
 }
 
 #navigationList a:hover {
@@ -218,8 +215,7 @@ Navigation Menu
   z-index: 2;
   left: 0;
   position: absolute;
-  box-shadow:
-    4px 2px 4px -2px var(--border-shadow),
+  box-shadow: 4px 2px 4px -2px var(--border-shadow),
     -4px 2px 4px -2px var(--border-shadow);
 }
 #progress-bar-back {
@@ -327,7 +323,7 @@ leftPanel layout
   width: 100%;
   height: 5px;
   border-radius: 4px;
-  background-color: black;
+  background-color: var(--primary-content-dark);
   padding: 0;
 }
 .Xside1 {
@@ -339,6 +335,7 @@ leftPanel layout
 
 #PanelTitle > h1 {
   margin: 0.1em 0.2em;
+  color: var(--primary-content-dark);
 }
 
 /*project list*/
@@ -488,7 +485,7 @@ Information page
 }
 #addMemberDiv > button {
   border-radius: 0 0.3em 0.3em 0;
-  width: 2.3em;
+  aspect-ratio: 1 / 1;
 }
 
 #membersList {
@@ -975,7 +972,7 @@ Single pages
   padding: 0.2em;
   width: 100%;
   background-color: var(--secondary);
-  color: var(--secondary-content);
+  color: var(--secondary-content-dark);
   border-radius: 0.2em;
   cursor: pointer;
 }
@@ -1034,20 +1031,16 @@ Retractible
   width: 100%;
   overflow-y: hidden;
   --transitionTime: 0.2s;
-  transition:
-    clip-path var(--transitionTime),
-    shape-outside var(--transitionTime),
-    max-height 0s var(--transitionTime);
+  transition: clip-path var(--transitionTime),
+    shape-outside var(--transitionTime), max-height 0s var(--transitionTime);
   display: flow-root;
 }
 .ButtonRetractibleCheckbox:checked ~ .ButtonRetractibleDiv {
   clip-path: inset(0 0 0 0);
   shape-outside: inset(0 0 0 0);
   max-height: 10000px;
-  transition:
-    clip-path var(--transitionTime),
-    shape-outside var(--transitionTime),
-    max-height 0s 0s;
+  transition: clip-path var(--transitionTime),
+    shape-outside var(--transitionTime), max-height 0s 0s;
 }
 
 /*----------
